# SynOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  env
CXXlib/: Makefile
Clib/: Makefile
Klib/: CMakeLists.txt  Makefile  string.hpp
Klib/error/: cxa_virtual.cpp  panic.hpp  type.hpp
Klib/log/: log.hpp
Klib/system/: types.hpp
kern/: Makefile  link.ld
kern/algo/: crc32.cpp
kern/arch/amd64/: bootloader.nasm
kern/core/: main.cpp
kern/core/syscall/: stump.hpp
kern/error/: cxa_virtual.cpp  panic.hpp
kern/fs/: stump.hpp
kernel/: CMakeLists.txt  Makefile  asm  link.ld
kernel/algo/: crc32.cpp
kernel/arch/amd64/: bootloader.nasm
kernel/core/error/: cxa_virtual.cpp  panic.hpp  type.hpp
kernel/core/log/: log.hpp
kernel/core/syscall/: table.hpp
kernel/crypt/: stump.hpp
kernel/net/core/: endpoint.hpp  ip.cpp  ip.hpp  server.hpp
